set leftColumn-row to disply: none fixed spacing between header and content

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -88,6 +88,7 @@
 }
 .leftColumn-row {
   margin-top: 2em;
+  display: none;
 }
 
 @media (min-width: 1360px) {
@@ -308,6 +309,11 @@
 .back {
   transform: rotateY(180deg);
   z-index: 9999;
+}
+
+.service-link-container {
+  text-align: center;
+  margin-top: 8em;
 }
 
 .service-link {
