--- a/styles/main.scss
+++ b/styles/main.scss
@@ -88,7 +88,7 @@ body {
 // --------- BASE PAGE -------------
 
 .base-page {
-  padding: 150px 0 100px 0;
+  padding: 100px 0 100px 0;
   color: black;
   min-height: 100vh;
 
